--- a/app/globals.css
+++ b/app/globals.css
@@ -11,8 +11,7 @@ body{
 
 .container {
     width: 100%;
+    max-width: 85rem;
     margin-right: auto;
     margin-left: auto;
-    padding-right: 2rem;
-    padding-left: 2rem;
 }
