--- a/app/globals.css
+++ b/app/globals.css
@@ -59,3 +59,8 @@ body {
     border-radius: 0.75rem;
     background: linear-gradient(180deg, #242424 0%, #121212 40%);
 }
+
+
+.nav{
+    @apply sticky top-0 z-20 -mx-6 mb-4 w-screen bg-zinc-200/50 dark:bg-zinc-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0
+}
